--- a/gradle.properties
+++ b/gradle.properties
@@ -42,17 +42,17 @@ mapping_version=1.19.4
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=beesserverutils
+mod_id=beeserverutilities
 # The human-readable display name for the mod.
 mod_name=Bee's Server Utilities
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=CC BY-NC 4.0
 # The mod version. See https://semver.org/
-mod_version=0.0.1-1.19.4-FORGE
+mod_version=0.3.0-1.19.4-FORGE
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=net.beeboyd.beesserverutils
+mod_group_id=net.beeboyd.beeserverutilities
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=BeeBoyD
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
